[package]
name = "avl-tree-set"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
itertools = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
